# hyprboard

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  HYPRLAND.md  PLAN.md  README.md  WINIT_PATCHES.md
.github/workflows/: ci.yml  release.yml
assets/: hyprboard.desktop
docs/agents/: triage-labels.md
src/: app.rs  bee_import.rs  clipboard.rs  codec.rs  items.rs  main.rs  pdf_export.rs  persistence.rs  recent.rs  util.rs
src/board/: interaction.rs  mod.rs  render.rs  undo.rs
