[package]
name = "hyprboard"
version = "0.1.1"
edition = "2024"

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "wayland",
] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
image = { version = "0.25", features = ["png", "jpeg", "bmp", "gif", "webp"] }
rfd = "0.17"
arboard = { version = "3.6", features = ["image-data"] }
wgpu = { version = "27", default-features = false, features = ["vulkan"] }
ureq = "3"
rusqlite = { version = "0.34", features = ["bundled"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
imageproc = "0.25"
flate2 = "1"
log = "0.4"
env_logger = "0.11"
egui-phosphor = { version = "0.11.0", features = ["regular"] }

[patch.crates-io]
winit = { git = "https://github.com/abjoru/winit.git", branch = "hyprboard-v0.30-dnd" }
